@@ -1,9 +1,10 @@
-all: fw_DSO6021 fw_DSO6022BE fw_DSO6022BL fw_DDS120 fx2upload
+all: fw_DSO6021 fw_DSO6022BE fw_DSO6022BL fw_DDS120 fx2upload fw_version
 
-DSO6021=PyHT6022/Firmware/DSO6021
-DSO6022BE=PyHT6022/Firmware/DSO6022BE
-DSO6022BL=PyHT6022/Firmware/DSO6022BL
-DDS120=PyHT6022/Firmware/DDS120
+FIRMWARE=PyHT6022/Firmware
+DSO6021=$(FIRMWARE)/DSO6021
+DSO6022BE=$(FIRMWARE)/DSO6022BE
+DSO6022BL=$(FIRMWARE)/DSO6022BL
+DDS120=$(FIRMWARE)/DDS120
 
 
 .PHONY: fw_DSO6021
@@ -37,28 +38,38 @@ changelog:
 	git log --pretty="%cs: %s [%h]" > CHANGELOG
 
 
+# firmware version synchronisation to OpenHantek
+.PHONY:	fw_version
+fw_version:
+	@echo
+	@./MK_FW_VERSION.sh | tee $(FIRMWARE)/dso602x_fw_version.h
+
+
 # create a debian binary package
 .PHONY:	deb
-deb:	all changelog distclean
+deb:	clean all changelog
 	DEB_BUILD_OPTIONS=nocheck python setup.py --command-packages=stdeb.command bdist_deb
-	ln `ls deb_dist/hantek6022api_*.deb | tail -1` .
+	-rm -f hantek6022api_*_all.deb hantek6022api-*.tar.gz
+	ln `ls deb_dist/hantek6022api_*_all.deb | tail -1` .
+	ls -l deb_dist/hantek6022api_*_all.deb
 
 
 # create a debian source package
 .PHONY:	dsc
-dsc:	all changelog distclean
+dsc:	clean all changelog
 	DEB_BUILD_OPTIONS=nocheck python setup.py --command-packages=stdeb.command sdist_dsc
 
 
 .PHONY: debinstall
 debinstall: deb
-	sudo dpkg -i hantek6022api_*.deb
+	sudo dpkg -i hantek6022api_*_all.deb
 
 
-# remove all compiler artefacts
+# remove all compiler and package build artefacts
 .PHONY: clean
 clean:
-	-rm *~ .*~
+	python setup.py clean
+	-rm -rf *~ .*~ deb_dist dist *.tar.gz *.egg* build tmp
 	( cd $(DSO6021) && make clean )
 	( cd $(DSO6022BE) && make clean )
 	( cd $(DSO6022BL) && make clean )
@@ -66,11 +77,10 @@ clean:
 	( cd fx2upload && make clean )
 
 
-# remove all package build artefacts
+# remove all package builds
 .PHONY:	distclean
-distclean:
-	python setup.py clean
-	-rm -rf *~ .*~ deb_dist dist *.tar.gz *.egg* *.deb build tmp
+distclean: clean
+	-rm -f *.deb
 
 
 # transfer the needed hex files to OpenHantek
@@ -81,4 +91,6 @@ xfer: all
 	cp $(DSO6022BE)/dso6022be-firmware.hex \
 	../OpenHantek6022/openhantek/res/firmware
 	cp $(DSO6022BL)/dso6022bl-firmware.hex \
+	../OpenHantek6022/openhantek/res/firmware
+	cp $(FIRMWARE)/dso602x_fw_version.h \
 	../OpenHantek6022/openhantek/res/firmware
